--- a/TourAgency_/Views/LoginWindow/LoginWindow.xaml
+++ b/TourAgency_/Views/LoginWindow/LoginWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TourAgency_.Views.LoginWindow"
         mc:Ignorable="d"
-        Title="LoginWindow" Height="450" Width="800">
+        Title="Вход" Height="450" Width="800">
     
     <Grid>
         <Grid.ColumnDefinitions>
@@ -20,6 +20,19 @@
             <RowDefinition></RowDefinition>
             <RowDefinition></RowDefinition>
         </Grid.RowDefinitions>
+
+        <Border 
+                        Grid.Column="0"
+            Grid.ColumnSpan="2"
+                Grid.RowSpan="6">
+            <Border.Background>
+                <LinearGradientBrush StartPoint="0,0" EndPoint="1,0.7">
+                    <GradientStop Color="{StaticResource primaryBackColor1}"  Offset="0"/>
+                    <GradientStop Color="{StaticResource secondaryBackColor1}"  Offset="1"/>
+                </LinearGradientBrush>
+            </Border.Background>
+        </Border>
+        
         <TextBlock 
             Grid.Column="0"
             Grid.Row="2"
@@ -69,8 +82,10 @@
             Grid.ColumnSpan="2"
             Grid.Row="4"
             Margin="200,10"
+            Style="{StaticResource regularButton}"
             Command="{Binding LogIn}">
-            <TextBlock Text="Войти" FontSize="20"/>
+            <TextBlock Text="Войти" FontSize="20"
+                       HorizontalAlignment="Center"/>
         </Button>
     </Grid>
 </Window>
