--- a/TourAgency_/App.xaml
+++ b/TourAgency_/App.xaml
@@ -4,6 +4,11 @@
              xmlns:local="clr-namespace:TourAgency_"
              Startup="main1">
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="/Styles/UIColors.xaml"/>
+                <ResourceDictionary Source="/Styles/ButtonsDesign.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
