--- a/TourAgency_/Views/MainWindow/ChildViews/ClientRequestsView/ClientRequestsView.xaml
+++ b/TourAgency_/Views/MainWindow/ChildViews/ClientRequestsView/ClientRequestsView.xaml
@@ -18,19 +18,27 @@
         </Grid.RowDefinitions>
         <ListView ItemsSource="{Binding RequestsList, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
           Grid.Row="1"
+          Background="Transparent"
           Grid.Column="0"
           Grid.ColumnSpan="2"
           ScrollViewer.VerticalScrollBarVisibility="Auto">
             <ListView.ItemTemplate>
                 <DataTemplate>
-                    <UniformGrid Width="auto">
+                    <WrapPanel Orientation="Horizontal">
                         <TextBlock 
                             Text="{Binding Tour.Name, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                             Margin="0,0,30,0"
-                            FontSize="24"/>
-                        <TextBlock Text="{Binding RequestStatus}" FontSize="24" Margin="0,0,30,0"/>
-                        <TextBlock Text="{Binding ConclusionDate}" FontSize="24"/>
-                    </UniformGrid>
+                            FontSize="14"/>
+                        <TextBlock Text="{Binding RequestStatus}" FontSize="14" Margin="0,0,30,0"/>
+                        <TextBlock Text="{Binding SendDate, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" FontSize="14"/>
+                        <Button Width="64" Height="64" 
+                                Command="{Binding DataContext.RequestInfo, RelativeSource={RelativeSource AncestorType={x:Type ListView}}}"
+                                Background="Transparent"
+                                BorderThickness="0"
+                                CommandParameter="{Binding Id, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
+                            <Image Source="/Images/Info.png"/>
+                        </Button>
+                    </WrapPanel>
                 </DataTemplate>
             </ListView.ItemTemplate>
             <ListView.ItemsPanel>
@@ -56,9 +64,10 @@
                 <ComboBoxItem Content="Сначала старые" Tag="2"/>
             </ComboBox>
 
-            <ComboBox SelectedValue="{Binding SelectedOptionUserType, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+            <ComboBox SelectedValue="{Binding SelectedOptionRequestType, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
 SelectedValuePath="Tag"
       MinWidth="150"
+                      Visibility="{Binding EmployeeButtonsVisibility}"
       Margin="10">
                 <ComboBoxItem Content="Мои заявки" Tag="0"/>
                 <ComboBoxItem Content="Свободные заявки" Tag="1"/>
