--- a/TourAgency_/Views/MainWindow/MainWindow.xaml
+++ b/TourAgency_/Views/MainWindow/MainWindow.xaml
@@ -9,9 +9,11 @@
         xmlns:tourInfoView="clr-namespace:TourAgency_.Views.MainWindow.ChildViews.TourInfoView"
         xmlns:createRequestView="clr-namespace:TourAgency_.Views.MainWindow.ChildViews.CreateRequestView"
         xmlns:clientRequestView="clr-namespace:TourAgency_.Views.MainWindow.ChildViews.ClientRequestsView"
+        xmlns:requestInfoView="clr-namespace:TourAgency_.Views.MainWindow.ChildViews.RequestInfoView"
         xmlns:employeesList="clr-namespace:TourAgency_.Views.MainWindow.ChildViews.EmployeesList"
         xmlns:createEmployeeView="clr-namespace:TourAgency_.Views.MainWindow.ChildViews.CreateEmployeeView"
         xmlns:employeeInfo="clr-namespace:TourAgency_.Views.MainWindow.ChildViews.EmployeeInfoView"
+        xmlns:reportView="clr-namespace:TourAgency_.Views.MainWindow.ChildViews.ReportView"
         mc:Ignorable="d"
         d:DataContext="{d:DesignInstance Type=local:MainWindowViewModel}"
         Title="Турагентство" Height="720" Width="1280">
@@ -41,9 +43,21 @@
             <DataTemplate DataType="{x:Type employeeInfo:EmployeeInfoViewModel}">
                 <employeeInfo:EmployeeInfoView/>
             </DataTemplate>
+            <DataTemplate DataType="{x:Type requestInfoView:RequestInfoViewModel}">
+                <requestInfoView:RequestInfoView/>
+            </DataTemplate>
+            <DataTemplate DataType="{x:Type reportView:ReportViewModel}">
+                <reportView:ReportView/>
+            </DataTemplate>
         </ResourceDictionary>
     </Window.Resources>
     <Border>
+        <!--<Border.Background>
+            <LinearGradientBrush StartPoint="0,0" EndPoint="1,1">
+                <GradientStop Color="{StaticResource primaryBackColor1}"  Offset="0"/>
+                <GradientStop Color="{StaticResource secondaryBackColor1}"  Offset="1"/>
+            </LinearGradientBrush>
+        </Border.Background>-->
         <Grid Width="auto" Height="auto" >
             <Grid.ColumnDefinitions>
                 <ColumnDefinition></ColumnDefinition>
@@ -54,52 +68,89 @@
                 <RowDefinition ></RowDefinition>
                 <RowDefinition Height="6*"></RowDefinition>
             </Grid.RowDefinitions>
-            <Grid Grid.Row="0" 
-                  Grid.Column="1"
-                  Width="auto"
-                  Height="auto"
-                  HorizontalAlignment="Right">
 
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition></ColumnDefinition>
-                    <ColumnDefinition Width="auto"></ColumnDefinition>
-                </Grid.ColumnDefinitions>
+            <Border 
+                        Grid.Column="0"
+                Grid.RowSpan="2">
+                <Border.Background>
+                    <LinearGradientBrush StartPoint="0,0" EndPoint="1,0.7">
+                        <GradientStop Color="{StaticResource primaryBackColor1}"  Offset="0"/>
+                        <GradientStop Color="{StaticResource secondaryBackColor1}"  Offset="1"/>
+                    </LinearGradientBrush>
+                </Border.Background>
+            </Border>
+            <Border 
+            Grid.Column="1"
+    Grid.RowSpan="2">
+                <Border.Background>
+                    <LinearGradientBrush StartPoint="0,0" EndPoint="1,1">
+                        <GradientStop Color="{StaticResource primaryBackColor2}"  Offset="0"/>
+                        <GradientStop Color="{StaticResource secondaryBackColor2}"  Offset="1"/>
+                    </LinearGradientBrush>
+                </Border.Background>
+            </Border>
 
-                <Grid.RowDefinitions>
-                    <RowDefinition></RowDefinition>
-                    <RowDefinition></RowDefinition>
-                    <RowDefinition></RowDefinition>
-                </Grid.RowDefinitions>
+            <WrapPanel Orientation="Horizontal"
+                       Grid.Row="0"
+                       Grid.Column="1"
+                       HorizontalAlignment="Right"
+                       VerticalAlignment="Center"
+                       Margin="10,5">
+                <Button Command="{Binding LogOut}"
+                        Background="Transparent"
+                        BorderThickness="0"
+                        Grid.Row="0"
+                        Grid.Column="1"
+                        Width="64"
+                        Height="64"
+                        HorizontalAlignment="Right"
+                         VerticalAlignment="Center"
+                        Margin="10,0">
 
-                <Image
-                    Source="{Binding ProfilePicture, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                    Width="auto" 
-                    Height="auto" 
-                    Grid.Column="0" 
-                    Grid.RowSpan="3">
-                </Image>
-                <TextBlock 
-                    x:Name="Username" 
-                    Text="{Binding Username, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                    Grid.Column="1" 
-                    Grid.Row="0" 
-                    Margin="10,0,0,0"/>
+                    <Image Source="/Images/LogOut.png"/>
+                </Button>
+                <Grid Grid.Row="0" 
+      Grid.Column="1"
+      Width="auto"
+      Height="auto"
+      HorizontalAlignment="Right">
 
-                <TextBlock 
-                    x:Name="UserType" 
-                    Text="{Binding Usertype, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                    Grid.Column="1" 
-                    Grid.Row="1" 
-                    Margin="10,0,0,0"/>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition></ColumnDefinition>
+                        <ColumnDefinition Width="auto"></ColumnDefinition>
+                    </Grid.ColumnDefinitions>
 
+                    <Grid.RowDefinitions>
+                        <RowDefinition></RowDefinition>
+                        <RowDefinition></RowDefinition>
+                    </Grid.RowDefinitions>
 
+                    
+                    <Image
+        Source="{Binding ProfilePicture, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+        Width="auto" 
+        Height="auto" 
+        Grid.Column="0" 
+        Grid.RowSpan="3">
+                    </Image>
+                    <TextBlock 
+        x:Name="Username" 
+        Text="{Binding Username, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+        Grid.Column="1" 
+        Grid.Row="0" 
+        Margin="10,0,0,0"/>
 
-                <TextBlock Grid.Column="1" Grid.Row="2" Margin="10,0,10,0">
-                    <Hyperlink>Данные пользователя</Hyperlink>
-                </TextBlock>
+                    <TextBlock 
+        x:Name="UserType" 
+        Text="{Binding Usertype, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+        Grid.Column="1" 
+        Grid.Row="1" 
+        Margin="10,0,0,0"/>
 
-            </Grid>
+                </Grid>
 
+            </WrapPanel>
+            
             <Border
                 BorderBrush="Black"
                 BorderThickness="1"
@@ -118,23 +169,42 @@
                 Grid.Row="1">
                 <StackPanel Orientation="Vertical"
 >
-                    <Button Margin="10"
+                    <RadioButton Margin="10"
                         Height="40"
-                        Command="{Binding ToursList}">
-                        <TextBlock Text="Туры"/>
-                    </Button>
-                    <Button Margin="10"
+                        Command="{Binding ToursList}"
+                        Style="{StaticResource menuButton}"
+                        Tag="{StaticResource color1}"
+                        HorizontalAlignment="Center">
+                        <TextBlock FontSize="20" Text="Туры"/>
+                    </RadioButton>
+                    <RadioButton Margin="10"
                         Height="40"
-                        Command="{Binding RequestsList}">
-                        <TextBlock Text="Заявки"/>
-                    </Button>
+                        Style="{StaticResource menuButton}"
+                        Tag="{StaticResource color1}"
+                        Command="{Binding RequestsList}"
+                        HorizontalAlignment="Center">
+                        <TextBlock FontSize="20" Text="Заявки"/>
+                    </RadioButton>
 
-                    <Button Margin="10"
+                    <RadioButton Margin="10"
                     Height="40"
+                    Style="{StaticResource menuButton}"
+                    Tag="{StaticResource color1}"
                     Visibility="{Binding EmployeeButtonVisibility, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                    Command="{Binding EmployeesList}">
-                        <TextBlock Text="Сотрудники"/>
-                    </Button>
+                    Command="{Binding EmployeesList}"
+                    HorizontalAlignment="Center">
+                        <TextBlock FontSize="20" Text="Пользователи"/>
+                    </RadioButton>
+
+                    <RadioButton Margin="10"
+                        Height="40"
+                        Visibility="{Binding ReportsButtonVisibility, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                        Command="{Binding Report}"
+                        Style="{StaticResource menuButton}"
+                        Tag="{StaticResource color1}"
+                        HorizontalAlignment="Center">
+                        <TextBlock FontSize="20" Text="Отчёты"/>
+                    </RadioButton>
                 </StackPanel>
             </Border>
 
